<resources>
    <string name="app_name">uiTv</string>

    <string name="facebook_app_id">265291573980397</string>
    <string name="fb_login_protocol_scheme">fb265291573980397</string>
    <string name="no_internet_toast">Please check your Internet Connectivity and then try again.</string>
    <string name="title_activity_photo_data">PhotoData</string>
    <string name="swipe_ref">Swipe to Refresh</string>
    <string name="no_internet">No Internet Connection!
    Please check your connection and try again.</string>
    <string name="no_updates">No New Updates Available.
    We\'ll notify you when new updates arrive.</string>
    <string name="no_events">No Events Here! We\'ll notify you when events are added.</string>
    <string name="no_photos">No Photos Available</string>
    <string name="no_videos">No Videos Here! We\'ll notify you when videos are added.</string>

    <string-array name="societies">
        <item>ACM</item>
        <item>Coherent</item>
        <item>E-cell</item>
        <item>Green Army</item>
        <item>Hackerearth</item>
        <item>In-sync</item>
        <item>ISpeakaalay</item>
        <item>Mahasangraam</item>
        <item>Phoenix</item>
        <item>Shankhanaad</item>
        <item>Sundarban</item>
        <item>Technophilic</item>
        <item>TEDx</item>

    </string-array>
    <string name="contact">CONTACT NUMBER:</string>
    <string name="email">EMAIL:</string>
    <string name="fbpage">FACEBOOK PAGE:</string>
    <string name="website">WEBSITE:</string>
    <string name="mission">MISSION</string>
    <string name="about">ABOUT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_devs_details">The app has been developed by the third year students of University Institute of Technology RGPV, <b>Tarun Solanki</b> and <b>Shubhi Shukla</b> pursuing their bachelor\'s degree in engineering in Computer Science and Electronics and Communication respectively.</string>


    <string name="shubhi_email">shubhishukla31@gmail.com</string>
    <string name="tarun_email">tarunsolanki97@gmail.com</string>
    <string name="shubhi_fb_link">www.facebook.com/shubhi.shukla.562</string>
    <string name="tarun_fb_link">www.facebook.com/tarunsolanki97</string>
    <string name="version">Version 1.0</string>
    <string name="copyrights">Copyright &#169;
        The rights regarding the app are reserved with TechPursuiters.
</string>

    <string name="policy">https://uitv-techpursuiters.blogspot.in/2017/12/privacy-policy.html</string>
    <string name="email2">techpursuiters@gmail.com</string>
    <string name="credits">The app has used the following resources for some of the contents:</string>
    <string name="logo">http://www.logomaker.com</string>

    <string name="roundicon">http://www.flaticons.com/authors/roundicons</string>
    <string name="icons">http://www.flaticons.com/authors/Google</string>
    <string name="freepik">http://www.freepik.com</string>
    <string name="vector">https://www.flaticon.com/authors/vectors-market</string>
    <string name="buddha">https://www.flaticon.com/authors/pixel-buddha</string>
    <string name="flaticon">https://www.flaticon.com/</string>

    <string name="cc">http://www.creativecommons.org/licences/by/3.0</string>

    <string name="word_from_devs1">The purpose of this app is to bring the societies of UIT onto a single platform. The app focuses on providing regular updates of the events and various activities carried out by the different societies.</string>
    <string name="word_from_devs2">The app has not been made in collaboration with any of the societies and does not support any particular club as specific. The app provides unaltered information of the societies as given on their respective Facebook pages. The app does not alter any information of the societies provided by them, be it their logos or any event, update, photo or video they upload. The logos are used specifically for the ease of access of the users and the app does not use them in any illicit manner.</string>
    <string name="word_from_devs3">The app is solely an independent work of the developers.</string>

    <string name="share">Missed an important update of the college clubs? Here\'s to the rescue - an app that brings all the societies of UIT RGPV onto a single platform and keeps you updated with the various events and activities carried out by the societies by providing regular notifications. Download the app here:</string>
</resources>
