<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:layout_height="match_parent"
    tools:context="com.example.tarun.uitsocieties.tech.example.tarun.uitsocieties.drawer.App_info"
    android:background="@drawable/theme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="COPYRIGHTS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/copyrights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyrights"
        android:textColor="@color/black"
        android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EMAIL:"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email2"
        android:textColor="@color/colorPrimaryDark"
        android:clickable="true"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/word_from_devs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Word from Developers"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_from_devs1"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_from_devs2"
                android:layout_marginTop="7dp"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_from_devs3"
                android:layout_marginTop="7dp"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Privacy Policy"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic"/>

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="CREDITS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/credits"
        android:textColor="@color/black"
        android:textSize="17sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="Logo made with the help of:"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/logomaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="italic"
         />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Icons made by:"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/roundicons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/roundicon"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="italic"
         />

        <TextView
            android:id="@+id/googleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/icons"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/freepik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/freepik"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/vectors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vector"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/pixbuddha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buddha"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From:"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/flaticons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flaticon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Licensed By:"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/creativeCommons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cc"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="italic" />

    </LinearLayout>

    </LinearLayout>
</ScrollView>
