<ScrollView
        android:id="@+id/about_the_devs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/theme"
        tools:context="tech.pursuiters.techpursuiters.uitsocieties.drawer.AboutTheDevelopers">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <ImageView
        android:id="@+id/shubhi_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/_shubhi" />

    <ImageView
        android:id="@+id/tarun_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:src="@drawable/tarun4" />

    </LinearLayout>

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/images"
        android:text="@string/about_devs_details"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/facebook_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="Facebook:"
        android:textColor="@color/black"
        android:layout_below="@id/details"
        android:layout_marginTop="25dp"
         />

        <LinearLayout
            android:id="@+id/facebook_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/shubhi_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shubhi_fb_link"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/tarun_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tarun_fb_link"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/emails_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emails:"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
         />

        <LinearLayout
            android:id="@+id/emails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp">


            <TextView
                android:id="@+id/tarun_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/tarun_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/shubhi_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/shubhi_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>


