<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        tools:context="com.example.tarun.uitsocieties.about_fragment.AboutFrag">

        <ImageView
            android:id="@+id/society_logo"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/society_logo"
            android:layout_alignLeft="@+id/society_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAppearance="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:id="@+id/society_name"/>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:visibility="visible"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/society_name"
            android:textAppearance="@color/colorPrimaryDark"
            android:id="@+id/objective" />

        <!--About-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/objective"
            android:visibility="visible"
            android:id="@+id/about"
            android:textAppearance="@color/colorPrimaryDark" />

        <!--contact number-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:id="@+id/contact"
            android:visibility="visible"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/about"
            android:layout_marginRight="20dp"
            android:text="@string/contact"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/contact_number"
            android:layout_marginLeft="20dp"
            android:layout_alignLeft="@+id/contact"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/contact"
            android:visibility="visible"
            android:textAppearance="@color/colorPrimaryDark"/>

        <!--E-mail-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"
            android:layout_below="@+id/contact_number"
            android:visibility="visible"
            android:layout_marginRight="20dp"
            android:text="@string/email"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/mail"
            android:layout_marginLeft="20dp"
            android:visibility="visible"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/email"
            android:layout_below="@+id/email"
            android:textAppearance="@color/colorPrimaryDark"
            android:textColor="#330099"
            android:clickable="true"
            android:focusableInTouchMode="true" />

        <!--Facebook page-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:id="@+id/fbpage"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/mail"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:text="@string/fbpage"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fbpage"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"
            android:textColor="#330099"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/fbpage"
            android:textAppearance="@color/colorPrimaryDark"
            android:id="@+id/fblink"
            android:clickable="true"/>

        <!--Website-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:id="@+id/webpage"
            android:textSize="15sp"
            android:visibility="visible"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/fblink"
            android:layout_marginRight="20dp"
            android:text="@string/website"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:textSize="15sp"
            android:textColor="#330099"
            android:visibility="visible"
            android:textAppearance="@color/colorPrimaryDark"
            android:id="@+id/website"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/webpage"
            android:layout_below="@+id/webpage" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"/>

    </LinearLayout>
</ScrollView>
